services/code-for-boston/leantime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leantime
  namespace: code-for-boston
spec:
  selector:
    app: leantime
  ports:
    - port: 80
      targetPort: 80
